--- a/app/src/main/res/layout/activity_digital_ink_main.xml
+++ b/app/src/main/res/layout/activity_digital_ink_main.xml
@@ -114,7 +114,8 @@
                 android:layout_marginLeft="10dp"
                 android:background="@color/common_google_signin_btn_text_dark_default"
                 android:contentDescription="@string/save"
-                android:paddingTop="5dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="51dp"
                 android:src="@drawable/save" />
 
             <ImageButton
