--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -51,29 +51,30 @@
         android:id="@+id/help_btn"
         android:layout_width="163dp"
         android:layout_height="43dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/button"
         android:text="Help"
         android:textColor="#FFFFFF"
-        android:background="@drawable/button"
         app:layout_constraintBottom_toBottomOf="@+id/WelcomeText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_btn"
-        app:layout_constraintVertical_bias="0.14" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/signin_btn"
         android:layout_width="163dp"
         android:layout_height="43dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="140dp"
-        android:textColor="#FFFFFF"
-        android:text="Sign In"
         android:background="@drawable/button"
+        android:text="Sign In"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/WelcomeText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/help_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/help_btn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView3"
