--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_page"
-    tools:context=".SignIn">
+    tools:context="com.smartboard.samples.sbfinal.SignIn">
 
     <TextView
         android:id="@+id/appName"
