--- a/app/src/main/res/layout/activity_digital_ink_main.xml
+++ b/app/src/main/res/layout/activity_digital_ink_main.xml
@@ -205,7 +205,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_weight="1"
-        android:background="#80FFFFFF" />
+        android:background="#FFFFFF" />
 
     <LinearLayout
         android:id="@+id/paint_colors"
